# rs-sudoku-bruteforce

./: 04c15d20-bf2b-4e3d-aa5b-29e871bd546d_answer.json  04c15d20-bf2b-4e3d-aa5b-29e871bd546d_puzzle.json  Cargo.toml  README.md  f30378ec-3cfb-4ed8-8d7e-7948d49e116f.answer  f30378ec-3cfb-4ed8-8d7e-7948d49e116f.puzzle
brute_solver_lib/: Cargo.toml
brute_solver_lib/src/: brute_solver.rs  file_reader.rs  lib.rs  puzzle_state.rs
brute_solver_lib/test_files/: sudoku_test.json
brute_solver_prgm/src/: main.rs  puzzle_state.rs
examples/: example_answer.json  example_puzzle.json
non_src/: generated_boards.txt
puzzle_maker_lib/: Cargo.toml  f8c54d97-1567-42fd-beb1-2b710a8cd14a.answer
puzzle_maker_lib/src/: board_builder.rs  duplicate_checker.rs  file_writer.rs  lib.rs  puzzle_board.rs  puzzle_maker.rs  puzzle_patterns.rs  puzzle_piece.rs
puzzle_maker_lib/tests/: integration_test.rs
puzzle_scorer_lib/: Cargo.toml
puzzle_scorer_lib/src/: lib.rs
rs_sudoku_menu/: Cargo.toml
rs_sudoku_menu/src/: main.rs  menu.rs
src/: brute_solver.rs  main.rs  puzzle_state.rs
