[package]
name = "puzzle_maker_lib"
version = "0.1.0"
authors = ["penn <penn@local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = "1.0.110"
serde_json = "1.0.52"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rayon = "1.3.0"               # Simple work-stealing parallelism for Rust