[package]
name = "rs_sudoku"
version = "0.1.0"
authors = ["penn <penn@local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0.53"
puzzle_maker_lib = {path = "../puzzle_maker_lib" }
brute_solver_lib = {path = "../brute_solver_lib" }